style/style.css
/* ... */
/* ====================== 1 || GLOBAL SETTINGS ====================== */

/* ----------- 1.1 | GENERAL PAGE LAYOUT ----------- */

* {
    font-family: 'Raleway', sans-serif;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html, body {
    width: 100%;
    font-size: 16px;
}

#welcome-title {font-size: 30px;}

a {
    text-decoration: none;
    color:var(--clr-text-default);
    cursor: pointer;
    position: relative; /* Relation position for City Results card links */
    z-index: 3; /* Custom z-index for <a> links to stay on top of .pseudo-hover::after layer */
}

button {cursor: pointer;}

section {margin-bottom: 50px;}

section h2 {font-size: 30px;}


/* ----------- 1.2 | CARD DESIGN ----------- */
/* Applies to every type of cards in the page */

.card {
    background-color: white;
    box-shadow: var(--box-shadow);
    font-size: var(--fs--small);
    transform: translateY(0px) scale(1);
    transition: transform .25s ease;
}


/* ----------- 1.3 | CARD SHADOW ANIMATION ----------- */
/* Applies to every type of cards in the page */

.card:hover {
    transform: translateY(-2px) scale(1.02);
    transition: transform .25s ease;
}

.pseudo-hover {position: relative;}

.pseudo-hover::after { 
    content:'';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    opacity: 0;
    border-radius: 25px;
    box-shadow: var(--box-shadow-hover);
    transition: opacity .25s ease;
}

.cr-card.pseudo-hover::after {margin: -5px;}

.pseudo-hover:hover::after {
    opacity: 1;
    transition: opacity .25s ease;
} 


/* ----------- 1.4 | RATING STARS PROPERTIES ----------- */

/* Blue star */
.fa-star {color:var(--clr-blue);}

/* Grey star */
.empty-star {color:var(--clr-light-grey);}


/* ====================== 2 || DESKTOP LAYOUT ====================== */

/* ----------- 2.1 | HEADER  : NAVIGATION MENU ----------- */

header {
    margin-left: 3.5%;
    margin-right: 3.5%;
    margin-bottom: 50px;
}

nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

#logo-booki {
    height: 60px;
}

.links-container {
    display: flex;
    align-items: center;
    
}

.nav-link {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 90px;
    min-width: 200px;
}

.nav-link:link, .nav-link:visited {
    border: 2px solid transparent;
    display: flex;
}

.nav-link:hover, .nav-link:active {
    color: var(--clr-blue);
    border-top: 2px solid var(--clr-blue);
}


/* ----------- 2.2 | SECTION : WELCOME ----------- */

#welcome-section {
    margin-left: 3.5%;
    margin-right: 3.5%;
    margin-bottom: 50px;
}


/* ----------- 2.3 | SECTION : SEARCH ----------- */

#search-section {
    margin-left: 3.5%;
    margin-right: 3.5%;
}

#search-form {
    display: flex;
    flex-direction: column;
}

#search-input-container {
    display: flex;
    align-items: center;
    margin-bottom: 50px;
    font-size: 24px;
}

.fa-map-marker-alt {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    height: 60px;
    background-color: var(--clr-light-grey);    
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

#search-input-container input {
    border: none;
    border-top: 1px solid var(--clr-light-grey);
    border-bottom: 1px solid var(--clr-light-grey);
    padding: 0 16px 0 10px;
    height: 60px;
    font-weight: var(--fw-bold);
}

#search-btn-full {
    background-color: var(--clr-blue);
    color: white;
    border: none;
    height: 60px;
    padding: 0 16px 0 16px;
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
}

#search-btn-icn {
    display: none;
    background-color: var(--clr-blue);
    font-size: 24px;
    color: white;
    border: none;
    height: 60px;
    width: 60px;
    min-width: 60px;
    margin-left: -20px;
    border-radius: 10px;
}


/*---- Search filters ----*/

#search-filters {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    margin-bottom: 16px;
}

.filter {
    background-color: white;
    align-content: center;
    margin: 16px;
    height: 60px;
    padding: 5px 15px 5px 5px;
    font-weight: var(--fw-bold);
    font-size: 24px;
    border: 2px solid var(--clr-light-grey);
    border-radius: 50px;
}

.filter:hover {
    color: white;
    background-color: var(--clr-blue);
    border-color:var(--clr-blue);
}


/*---- Filter icons ----*/

button.filter::before {

    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    border : 1px solid var(--clr-light-blue);
    margin-top: -10px;
    margin-bottom: -10px;
    margin-left: -15px;
    background-color: var(--clr-light-blue);
    border-radius: 50%;
    color: var(--clr-blue);
}

button#eco::before {
    content: var(--fa-eco);
    padding: 15px 14px;
}

button#fam::before {
    content: var(--fa-fam);
    padding: 15px 20px;
}

button#rom::before {
    content: var(--fa-rom);
    padding: 15px 17px;
}

button#ani::before {
    content: var(--fa-ani);
    padding: 15px 15px;
}

span.info::before {
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    content: var(--fa-info);
    padding : 4px 13px;
    border : 1px solid var(--clr-light-grey);
    border-radius: 50%;
    color: var(--clr-blue);
}


/* ----------- 2.4 | SECTION : ACCOMODATIONS RESULTS----------- */

#results-section {
    margin-left: 3.5%;
    margin-right: 3.5%;
    display: flex;
    flex-wrap: wrap-reverse;
    gap: 50px 2%;
}
/* ... */

